# ChangeLog for dev-tex/svninfo
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/svninfo/ChangeLog,v 1.34 2009/08/05 06:59:15 aballier Exp $

  05 Aug 2009; Alexis Ballier <aballier@gentoo.org> -svninfo-0.6.ebuild,
  -svninfo-0.7.3.ebuild:
  remove old

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> svninfo-0.7.3-r1.ebuild:
  arm/s390/sh stable wrt #253551

  11 Mar 2009; Raúl Porcel <armin76@gentoo.org> svninfo-0.7.3-r1.ebuild:
  Add ~arm/~s390/~sh

  11 Jan 2009; Markus Meier <maekke@gentoo.org> svninfo-0.7.3-r1.ebuild:
  x86 stable, bug #254083

  10 Jan 2009; Raúl Porcel <armin76@gentoo.org> svninfo-0.7.3-r1.ebuild:
  ia64/sparc stable wrt #254083

  10 Jan 2009; Tobias Klausmann <klausman@gentoo.org>
  svninfo-0.7.3-r1.ebuild:
  Stable on alpha, bug #254083

  09 Jan 2009; Thomas Anderson <gentoofan23@gentoo.org>
  svninfo-0.7.3-r1.ebuild:
  stable amd64, bug 254083

  09 Jan 2009; Joseph Jezak <josejx@gentoo.org> svninfo-0.7.3-r1.ebuild:
  Marked ppc stable for bug #254083.

  08 Jan 2009; Jeroen Roovers <jer@gentoo.org> svninfo-0.7.3-r1.ebuild:
  Stable for HPPA (bug #254083).

  07 Jan 2009; Brent Baude <ranger@gentoo.org> svninfo-0.7.3-r1.ebuild:
  stable ppc64, bug 254083

  06 Oct 2008; Jeroen Roovers <jer@gentoo.org> svninfo-0.7.3-r1.ebuild:
  Marked ~hppa (bug #237202).

  04 Oct 2008; Brent Baude <ranger@gentoo.org> svninfo-0.7.3-r1.ebuild:
  Marking svninfo-0.7.3-r1 ~ppc for bug 237202

  23 Sep 2008; Raúl Porcel <armin76@gentoo.org> svninfo-0.7.3-r1.ebuild:
  Add ~alpha/~ia64 wrt #237202

  22 Sep 2008; Ferris McCormick <fmccor@gentoo.org> svninfo-0.7.3-r1.ebuild:
  Add ~sparc keyword, part of Bug #237202.

  21 Sep 2008; Brent Baude <ranger@gentoo.org> svninfo-0.7.3-r1.ebuild:
  Marking svninfo-0.7.3-r1 ~ppc64 for bug 237202

  04 Sep 2008; Alexis Ballier <aballier@gentoo.org> svninfo-0.7.3-r1.ebuild:
  keyword ~x86-fbsd

*svninfo-0.7.3-r1 (03 Sep 2008)
