@@ -1,5 +1,5 @@
 AUX svninfo-0.5-latex-compile.patch 269 RMD160 94b3f0964a023af692cc2df496c28bd6e82f653b SHA1 e8369b145d9a58fea20515f9c0448544db986e9d SHA256 48e44728adef50ed336273ee25e88e4b6c4ce688d27b223cffc76257583dbefb
 DIST svninfo-0.7.3.tar.gz 14969 RMD160 9018aeccbae516f6c36a5302e8324a88569ff0d1 SHA1 b12c5d30115a4a2f2e851fd131b4dd5350100c0b SHA256 0bfb62bcce7c1d5504549e5c0ad70fa00264db5dac8898eec49e099da89ed673
-EBUILD svninfo-0.7.3-r1.ebuild 768 RMD160 183466fb4750a3d0a31b662224d819af83384cad SHA1 5fc3ebe1400822c2d8cf7f9e6af7a901c13db6be SHA256 bea3ecbabc13a138657714cba3475aee042f24fdb953960d7ab672bddb043823
-MISC ChangeLog 4310 RMD160 227f52e08756bbf9e72075967d491ca3debf85de SHA1 431d3b91b26991392f07162884842f7d4c2acfb8 SHA256 ff0064a2105ebc75c66918663e9a6273ea3911582b0aeadbfcd596136e4c8b5e
+EBUILD svninfo-0.7.3-r1.ebuild 770 RMD160 9e3b5830fde96d184ac0287559d3a63efa68dd03 SHA1 db22006962cc7b7894d0e42ec91cd7e80fe6b407 SHA256 db67eea71386be83a939401b6750f3dd0d41102fbf3e9ce3f1152ff6ee4bc97c
+MISC ChangeLog 4471 RMD160 102371fafba50bf48372970e7fd099766c3036e7 SHA1 3582ca9ae07233cfb96087e1afd0332126682c38 SHA256 f8e29161eb441f7a1a3061d30a9a1e430201f9751ecf4fb0bda1279927225613
 MISC metadata.xml 156 RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 SHA1 e9260cd53905d8569cf3327ded4c6d01653fc389 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6
